src/styles/main.css
/* ... */
@media (max-width: 767px) {
.banner-right {

    min-width: 100%;
    max-width: 100%;
    margin-top: 80px;
    margin-left: auto;
    margin-right: auto;
    display: block;
    order: 1;
  
}
}
/*-------- End Banner Area ------------*/
/*-------- Start home-about Area ------------*/
@media (max-width: 767px) {
.home-about-right {

    margin-top: 30px;
  
}
}
.home-about-right h6 {

  margin-bottom: 30px;
  text-transform: uppercase;
  font-weight: 400;

}
.home-about-right h1 {

  margin-bottom: 40px;

}
@media (max-width: 991px) {
.home-about-right h1 {

    font-size: 20px;
  
}
}
.home-about-right p {

  margin-bottom: 30px;
  /* max-width: 445px; */

}
.home-about-right .primary-btn:hover {

  box-shadow: 0px 20px 20px 0px rgba(132, 144, 255, 0.3);

}
/*-------- End home-about Area ------------*/
/*--------- Start Services Area -------------*/
.single-services {

  text-align: center;
  margin-top: 60px;

}
.single-services .lnr {

  font-size: 35px;
  color: var(--color-text-primary);
  -webkit-transition: all 0.3s ease 0s;
  -moz-transition: all 0.3s ease 0s;
  -o-transition: all 0.3s ease 0s;
  transition: all 0.3s ease 0s;

}
.single-services h4 {

  margin-top: 30px;
  margin-bottom: 20px;
  -webkit-transition: all 0.3s ease 0s;
  -moz-transition: all 0.3s ease 0s;
  -o-transition: all 0.3s ease 0s;
  transition: all 0.3s ease 0s;

}
.single-services p {

  max-width: 318px;
  margin-left: auto;
  margin-right: auto;
  display: block;

}
.single-services:hover h4 {

  color: var(--color-brand);

}
/*--------- End Services Area -------------*/
/*--------- Start Facts Area -------------*/
/*--------- End Facts Area -------------*/
/*--------- Start Portfolio Area -------------*/
.portfolio-area .primary-btn {

  color: var(--color-text-inverse);
  background-color: var(--color-brand-purple);
  margin-left: auto;
  margin-right: auto;

}
.portfolio-area .filters {

  text-align: center;

}
.portfolio-area .filters ul {

  padding: 0;

}
.portfolio-area .filters ul li,
.portfolio-area .filters ul li button {

  list-style: none;
  display: inline-block;
  cursor: pointer;
  position: relative;
  padding: 12px 15px;
  text-transform: uppercase;
  color: #222 !important;
  background-color: transparent !important;
  font-size: 12px;
  font-weight: 500;

}
@media (max-width: 736px) {
.portfolio-area .filters ul li {

    padding: 6px 6px;
  
}
}
.portfolio-area .filters ul li:after {

  content: "";
  display: block;
  width: calc(0% - 60px);
  position: absolute;
  height: 2px;
  background: #333;
  transition: width 350ms ease-out;

}
.portfolio-area .filters ul li:hover:after {

  width: calc(100% - 60px);
  transition: width 350ms ease-out;

}
.portfolio-area .filters ul li.active {

  color: var(--color-brand-purple);

}
.single-portfolio {

  border-radius: 5px;
  cursor: pointer;

}
.single-portfolio:hover .thumb .overlay-bg {

  opacity: 0.85;

}
.thumb .overlay-bg {

  opacity: 0;
  border-radius: 5px;
  -webkit-transition: all 0.3s ease 0s;
  -moz-transition: all 0.3s ease 0s;
  -o-transition: all 0.3s ease 0s;
  transition: all 0.3s ease 0s;

}
/*--------- End Portfolio Area -------------*/
/*--------- start testimonial area  -------------*/
.text-decoration-none {

  text-decoration: none;

}
.review-text {

  overflow: hidden;
  text-overflow: ellipsis;
  display: -webkit-box;
  -webkit-line-clamp: 3;
  line-clamp: 3;
  -webkit-box-orient: vertical;
  color: grey;

}
.ContentHolder {

  width: 100%;

}
@media screen and (max-width: 768px) {
.review-text {

    -webkit-line-clamp: 5;
    line-clamp: 5;
  
}
}
/*--------- end testimonial area  -------------*/
/*-------- Start Common Page Style   -------------*/
.link-nav {

  margin-top: 10px;
  margin-bottom: 0px;

}
.about-content {

  margin-top: 70px;
  padding: 90px 0px;
  text-align: center;

}
@media (max-width: 767px) {
.about-content {

    margin-top: 70px;
  
}
}
.about-content h1 {

  font-size: 48px;
  font-weight: 600;

}
.about-content a {

  color: var(--color-text-inverse);
  font-weight: 300;
  font-size: 14px;

}
.about-content .lnr {

  margin: 0px 10px;
  font-weight: 600;

}
/*-------- End Common Page Style   -------------*/
/* =================================== */
/*  About Page Styles
/* =================================== */
/*-------- Start Skillbar Style  -------------*/
.single-skill p {

  margin-top: 30px;
  margin-bottom: 5px;
  text-align: right;

}
/*--------  End Skillbar Style  -------------*/
/* -------------------------
   ----- Media Queries -----
   ------------------------- */
/* =================================== */
/*  Pricing Page Styles
/* =================================== */
/* =================================== */
/*  Blog Styles
/* =================================== */
/*============ Start Blog Home Styles  =============*/
.top-category-widget-area {

  background-color: var(--color-surface-light);

}
/*============ End Blog Home Styles  =============*/
/*============ Start Blog Single Styles  =============*/
/*============ End Blog Single Styles  =============*/
/* =================================== */
/*  Contact Page Styles
/* =================================== */
/* =================================== */
/*  Footer Styles
/* =================================== */
.footer-area {

  background-color: var(--color-surface-darker);

}
@media screen and (max-width: 340px) {
.footer-area {

    overflow-x: auto;
  
}
}
.footer-area .fa {

  color: var(--color-text-inverse);
  transition: 0.3s ease-in-out;

}
.footer-area .fa:hover {

  color: var(--color-brand);

}
/*-------- end footer Area -------------*/
/* Disable Dragging and copying textual content*/
*,
*::after,
*::before {

  user-select: none;
  -webkit-user-select: none;
  -webkit-user-drag: none;
  -webkit-app-region: no-drag;

}
.nav-link {

  color: #222 !important;
  width: max-content;
  text-transform: uppercase;

}
/* ... */

